test/conformance/chainsaw/deleting-policies/schedule/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: default
spec:
  containers:
    - name: nginx
      image: public.ecr.aws/docker/library/nginx:latest
