test/conformance/chainsaw/deleting-policies/schedule/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: default
